deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labelguard-deployment
  labels:
    app: labelguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labelguard
  template:
    metadata:
      labels:
        app: labelguard
    spec:
      containers:
      - name: labelguard
        image: inseefrlab/onyxia-vscode-python:py3.13.5
        imagePullPolicy: Always
        # Correction de la commande pour exécuter le script
        command: ["/bin/bash", "-c"]
        args:
          - |
            set -e
            git clone -b main https://github.com/mateomorin/LabelGuard.git
            cd LabelGuard
            # Installation des dépendances si nécessaire (uv sync ou uv pip install)
            uv run uvicorn app.api:app --host 0.0.0.0 --port 8000
        ports:
        - containerPort: 8000
        # Ajout des sondes de santé pour Argo CD
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 20
        resources:
          limits:
            cpu: "8000m"
            memory: "15Gi"
          requests:
            cpu: "400m"
            memory: "2Gi"
