deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labelguard-service
spec:
  selector:
    app: labelguard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
